# volk-cpp

./: CMakeLists.txt  README.md  generate.py  volk.cpp  volk.hpp
.github/workflows/: build.yml  update.yml
cmake/: volkCppConfig.cmake.in
test/: run_tests.sh
test/cmake_using_installed_headers/: CMakeLists.txt  main.cpp
test/cmake_using_source_directly/: CMakeLists.txt
test/cmake_using_subdir_headers/: CMakeLists.txt  main.cpp
test/cmake_using_subdir_static/: CMakeLists.txt  main.cpp
